# nedvig

./: .gitignore  NEDVIG.py  amvera.yml  main.py  messages.db  pyproject.toml  requirements.txt  tags
archive/: code.py
data/: __init__.py  book.py  db.sqlite  states.py
db/: __init__.py  create.py  info.py  table.py
filters/: filter.py  repeat.py
handlers/: __init__.py  admin.py  arenda_buy.py  contin.py  error.py  phone.py  registration.py  repeat_sell.py  sell.py  start.py
keyboard/: __init__.py  builders.py
middlewares/: antiflood.py
utils/: info.py
